Bug 483919 - Toggle keyboard light key doesn't work in lock screen
Summary: Toggle keyboard light key doesn't work in lock screen
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Screen locking (other bugs)
Version First Reported In: 6.2.4
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-03-18 17:56 UTC by Rajas Paranjpe
Modified: 2025-01-14 02:43 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rajas Paranjpe 2024-03-18 17:56:24 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Use a laptop which has a toggle keyboard light button. Or you can use keyd to rebind a key to the toggle keyboard light function.
2. Lock
3. Try toggling the keyboard light

OBSERVED RESULT
Nothing happens when pressing the keyboard light key.

EXPECTED RESULT
The keyboard light should toggle.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora 39
KDE Plasma Version: 5.27.11
KDE Frameworks Version: 5.115.0
Qt Version: 5.15.12

ADDITIONAL INFORMATION
This is on a Redrix (HP Elite Dragonfly Chromebook). This bug is specific to the lock screen. After unlocking, the key functions as expected.
Comment 1 fanzhuyifan 2024-03-18 23:18:57 UTC
Can't reproduce on plasma 6.1 dev build, wayland. The keyboard brightness keys work in lockscreen.
Comment 2 Rajas Paranjpe 2024-03-19 01:08:46 UTC
(In reply to fanzhuyifan from comment #1)
> Can't reproduce on plasma 6.1 dev build, wayland. The keyboard brightness
> keys work in lockscreen.

Maybe it was fixed in Plasma 6
Comment 3 Rajas Paranjpe 2024-03-19 01:10:53 UTC
(In reply to fanzhuyifan from comment #1)
> Can't reproduce on plasma 6.1 dev build, wayland. The keyboard brightness
> keys work in lockscreen.

Actually the keyboard brightness up and down keys work on the Plasma 5 lock screen too. But the **toggle** keyboard light key doesn't
Comment 4 fanzhuyifan 2024-03-19 02:33:51 UTC
(In reply to Rajas Paranjpe from comment #3)
> (In reply to fanzhuyifan from comment #1)
> > Can't reproduce on plasma 6.1 dev build, wayland. The keyboard brightness
> > keys work in lockscreen.
> 
> Actually the keyboard brightness up and down keys work on the Plasma 5 lock
> screen too. But the **toggle** keyboard light key doesn't

Ok I was testing with keyboard brightness up and down keys. I don't have a toggle key.
Comment 5 Tammes Burghard 2024-03-24 17:33:04 UTC
I can confirm the brightness controls and color switch buttons work, but toggle does not. I am on a tuxedo aura 15 gen 1 in case that is relevant.
Comment 6 Bug Janitor Service 2025-01-11 13:15:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kscreenlocker/-/merge_requests/252
Comment 7 fanzhuyifan 2025-01-14 02:11:11 UTC
Git commit 8c94085926209dd8da7a89a2010b941a5476dea4 by Yifan Zhu.
Committed on 14/01/2025 at 02:08.
Pushed by fanzhuyifan into branch 'master'.

globalaccel: whitelist Toggle Keyboard Backlight

M  +2    -2    globalaccel.cpp

https://invent.kde.org/plasma/kscreenlocker/-/commit/8c94085926209dd8da7a89a2010b941a5476dea4
Comment 8 fanzhuyifan 2025-01-14 02:43:01 UTC
Git commit 28fdb0641050fdc0029d90d6fdc7d53435b4175a by Yifan Zhu.
Committed on 14/01/2025 at 02:40.
Pushed by fanzhuyifan into branch 'Plasma/6.3'.

globalaccel: whitelist Toggle Keyboard Backlight


(cherry picked from commit 8c94085926209dd8da7a89a2010b941a5476dea4)

Co-authored-by: Yifan Zhu <fanzhuyifan@gmail.com>

M  +2    -2    globalaccel.cpp

https://invent.kde.org/plasma/kscreenlocker/-/commit/28fdb0641050fdc0029d90d6fdc7d53435b4175a