globalaccel: whitelist Toggle Keyboard Backlight

BUG: 483919


(cherry picked from commit 8c94085926209dd8da7a89a2010b941a5476dea4)

Co-authored-by: Yifan Zhu <fanzhuyifan@gmail.com>